adjust alignment - fixes #5

--- a/src/assets/svgs/Logo/Logo.module.css
+++ b/src/assets/svgs/Logo/Logo.module.css
@@ -1,15 +1,14 @@
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: auto;
-  padding: 2px 0;
-  margin: 0;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	padding: 2px 0;
+	margin: 0;
+	aspect-ratio: 1/1;
 }
 
 .logo {
-  width: min(calc(375px * var(--scale-size, 1)), 100%);
-  height: min(calc(375px * var(--scale-size, 1)), 100%);
-  aspect-ratio: 1/1;
+	width: min(calc(375px * var(--scale-size, 1)), 100%);
+	height: min(calc(375px * var(--scale-size, 1)), 100%);
+	aspect-ratio: 1/1;
 }
